# cleo2-typehints

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/tests/: test_nonecheck.py  test_to_bool_.py  test_typecheck.py
