[tool.poetry]
name = "cleo2_typehints"
version = "0.0.1a"
description = "Type-Hinted, Type-Enforced classes for cleo 2.x"
authors = ["Rob Voigt <code@ravoigt.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/RAVoigt/cleo2-typehints"
Repository = "https://github.com/RAVoigt/cleo2-typehints"

# ================================
# Tools etc.
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

# ================================
# Dependencies
[tool.poetry.dependencies]
python = "^3.11"
cleo = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "*"
ipdb = "*"
ipython = "*"
mock = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
